
// version of prorocol buffer used
syntax = "proto3";

package accountsdb_repl;

message ReplicaUpdatedSlotsRequest {
    uint64 last_replicated_slot = 1;
}

message ReplicaUpdatedSlotsResponse {
    repeated uint64 updated_slots = 1;
}

message ReplicaAccountsRequest {
    uint64 slot = 1;
}

message ReplicaAccountsResponse {
    repeated uint64 updated_slots = 1;
}

service AccountsDbRepl {
    rpc get_updated_slots(ReplicaUpdatedSlotsRequest) returns (ReplicaUpdatedSlotsResponse);
    rpc get_slot_accounts(ReplicaAccountsRequest) returns (ReplicaAccountsResponse);
}
